force-app/main/default/objects/Navigation_Menu_Item__mdt/Navigation_Menu_Item__mdt.object-meta.xml
<CustomObject>
    <label>Navigation Menu Item</label>
    <pluralLabel>Navigation Menu Items</pluralLabel>
</CustomObject>