force-app/main/default/objects/Navigation_Menu_Item__mdt/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>