force-app/main/default/objects/Navigation_Menu_Item__mdt/fields/Route_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_API_Name__c</fullName>
    <label>Route API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>