force-app/main/default/objects/Navigation_Menu_Item__mdt/fields/Route_URL__c.field-meta.xml
<CustomField>
    <fullName>Route_URL__c</fullName>
    <label>Route URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>